--- a/css/styles.css
+++ b/css/styles.css
@@ -218,8 +218,8 @@ section#IMG6{
     border-radius: 5px;
     font-family: helvetica;
     padding: 1rem;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 40%;
+    margin-right: 40%;
 }
 
 .quienesSomos .quienesSomos__button:hover{
@@ -348,7 +348,6 @@ footer .footer__img {
     color: #03788e;
     text-align: center;
     padding: 5rem;
-
 }
 
 
@@ -494,7 +493,7 @@ hr {
     
     .quienesSomos{
         display: flex;
-        flex-wrap:nowrap;
+        /* flex-wrap:nowrap; */
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -508,21 +507,94 @@ hr {
         border: #026C78;
         border-radius: 15px;
         box-shadow: 2px 4px 4px 2px rgba(0.3, 0.3, 0.3, 0.3);
+    
     }
+    
+    .quienesSomosSection1 {
+        /* box-sizing:border-box; */
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        align-items:center;
+        justify-content:center;
+        width: 90vw;
+        padding: 0rem;
+    }
+    
+
     .quienesSomos .quienesSomos__img{
-        width: 80vw;
+        width: 90vw;
         padding: 2rem;
         border-radius: 15px;
     }
     
-    .parallax {
-        background: url(./img/edificio.png);
-        background-size: 100vw;
-        /* background-attachment: fixed; */
-        width: 100vw;
-        align-self: center;
+    .quienesSomos .quienesSomos__title{
+        font-size: 3em;
+        color: white;
+        font-family: helvetica;
+        background: linear-gradient(to right, #03788e, #01a3a4);
+        text-align: center;
+        border-radius: 5px;
+        width: 80%;
     }
     
+    .quienesSomos .quienesSomos__text{
+        font-size: 1.1em;
+        width: 80%;
+        color: #0099a0;
+        font-family: helvetica;
+        padding: 0rem;
+        text-align: justify;
+    }
+    
+    .quienesSomos .quienesSomos__button{
+        text-decoration: none;
+        font-size: 1em;
+        color: white;
+        background-color: #0099a0;
+        border-radius: 5px;
+        font-family: helvetica;
+        padding: 0.5rem;
+        align-self: center;
+        /* position: center; */
+        /* margin-left: 40%;
+        margin-right: 40%; */
+    }
+
+    .parallax1 {
+        background: url(../img/edificio.png);
+        background-size: 100vw;
+        height: 30%;
+        align-items: center;
+        background-repeat: no-repeat;
+    }
+    .parallax2 {
+        background: url(../img/quienes_somos.jfif);
+        background-size: 100vw;
+        height: 30%;
+        align-items: center;
+        background-repeat: no-repeat;
+    }
+
+    .parallax3 {
+        background: url(../img/b1.png);
+        background-size: 100vw;
+        height: 30%;
+        align-items: center;
+        background-repeat: no-repeat;
+    }
+    .parallax4 {
+        background: url(../img/b4.png);
+        background-size: 100vw;
+        height: 30%;
+        align-items: center;
+        background-repeat: no-repeat;
+    }
+    .parallax5 {
+        background: url(../img/edificio.png);
+        background-size: 100vw;
+        height: 30%;
+        align-items: center;
+        background-repeat: no-repeat;
+    }
 }
-
-
