--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,7 +1,5 @@
 // HEADER + NAVIGATION
 
-
-
 header {
     display: flex;
     flex-direction: row;
@@ -94,3 +92,42 @@ header {
     
 }
 
+// FOOTER
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    color: white;
+    font-family: helvetica;
+    background: linear-gradient(to right, #03788e, #01a3a4);
+
+    nav .menu {
+        display: flex;
+        gap:2.2rem;
+    }
+    
+    .footerText {
+        display: flex;
+        justify-content: center;
+        color: white;
+    }
+    
+    .footer__img {
+        max-width: 50px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
+
+.footerTexto {
+    color: white;
+    font-family: helvetica;
+}
+
+.mediaIcon {
+    width: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
